--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "lexik/jwt-authentication-bundle": "^2.6",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
@@ -62,6 +63,7 @@
         }
     },
     "require-dev": {
+        "symfony/browser-kit": "4.2.*",
         "symfony/phpunit-bridge": "4.2.*",
         "symfony/var-dumper": "4.2.*",
         "symfony/web-server-bundle": "4.2.*"
