Add authentication using JWT

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,12 +1,36 @@
 security:
+
+  encoders:
+    Symfony\Component\Security\Core\User\User:
+      algorithm:  plaintext
+
   providers:
-    in_memory: { memory: ~ }
+    in_memory:
+      memory:
+        users:
+          - { name: "test", password: "test", roles: 'ROLE_USER' }
+
   firewalls:
+    login:
+      pattern:  /login
+      stateless: true
+      anonymous: true
+      json_login:
+        check_path: /api/login_check
+        success_handler: lexik_jwt_authentication.handler.authentication_success
+        failure_handler: lexik_jwt_authentication.handler.authentication_failure
+    api:
+      pattern: ^/api
+      stateless: true
+      guard:
+        authenticators:
+          - lexik_jwt_authentication.jwt_token_authenticator
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
     main:
       anonymous: true
+
   access_control:
-  # - { path: ^/admin, roles: ROLE_ADMIN }
-  # - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/login, roles: ROLE_ANOUNYMOUSLY }
+    - { path: ^/api, roles: ROLE_USER }
