--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -23,5 +23,10 @@ api_person_delete:
   methods: [DELETE]
   controller: App\Controller\DeletePerson
 
+api_user_account:
+  path: /api/account
+  methods: [GET]
+  controller: App\Controller\ViewAccount
+
 api_login_check:
   path: /token
